[gd_scene load_steps=4 format=3 uid="uid://bxiqclm36vook"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_3yeci"]
[ext_resource type="Shader" path="res://scenes/menu/pause_menu.gdshader" id="2_7t2l1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1fuuv"]
shader = ExtResource("2_7t2l1")
shader_parameter/amount = 2.0

[node name="PauseMenu" type="CanvasLayer"]
layer = 9
script = ExtResource("1_3yeci")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1fuuv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="button_resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="buttons_options" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Opcoes"

[node name="buttons_menu_principal" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Menu Principal"

[node name="buttons_quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/button_resume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/buttons_options" to="." method="_on_buttons_options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/buttons_menu_principal" to="." method="_on_buttons_menu_principal_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/buttons_quit" to="." method="_on_buttons_quit_pressed"]
